--- a/demo-easybank/App/Styles.css
+++ b/demo-easybank/App/Styles.css
@@ -35,7 +35,7 @@
 
 .rounded-btn {
     display: inline-block;
-    padding: 10px 20px;
+    padding: 10px 40px;
     border-radius: 25px;
     text-wrap: nowrap;
     background-image: linear-gradient(to right, var(--LimeGreen), var(--BrightCyan));
@@ -65,7 +65,8 @@
     font-optical-sizing: auto;
     font-weight: 300;
     font-style: normal;
-
+    padding-bottom:1rem;
+    margin-top:0rem;
 }
 
 .public-sans-400 {
@@ -126,7 +127,7 @@ body {
     background-color: var(--white);
     margin: .5rem 0;
     overflow: hidden;
-    border-radius: 5px;
+    border-radius: 10px;
     display: flex;
     flex-direction: column;
 
@@ -138,18 +139,20 @@ body {
 
 
 .picture-card-info {
-    padding: 0.8rem;
+    padding: 1.6rem;
     max-height: 50%;
-    min-height: 50%;
+    min-height: 200px;
+    justify-content: center;
 }
 
 .picture-card-img {
 
     max-height: 50%;
-    min-height: 50%;
+    min-height: 200px;
     overflow: hidden;
     height: auto;
     width: 100%;
+    justify-content: center;
 }
 
 .picture-card-img img {
@@ -161,19 +164,20 @@ body {
 }
 
 .author {
-    font-size: 10px;
-    padding: 0.5rem;
+    font-size: 12px;
+    padding-top: 0,5rem;
 }
 
 .title {
     font-size: 28px;
-    padding: 0.5rem;
+    padding-bottom: 1rem;
+    padding-top: 2rem;
     overflow: hidden;
 }
 
 .title-small {
-    font-size: 14px;
-    padding: 0.5rem;
+    font-size: 16px;
+    padding-top: 0,5rem;
 }
 
 .desc {
@@ -187,9 +191,8 @@ body {
     color: var(--Grayish-Blue);
     display: flex;
     justify-content: space-between;
-    align-items: center;
     margin: 0 50px;
-    padding: 10px;
+    padding: 30px;
     z-index: 1000;
 
 }
@@ -214,7 +217,7 @@ body {
     padding: 0;
     margin: 0;
     display: flex;
-    gap: 2rem;
+    gap: 1rem;
 }
 
 .menu li {
@@ -224,7 +227,7 @@ body {
 
 .menu a {
     text-decoration: none;
-    color: var(--Grayish-Blue);
+    color:black;
 }
 
 .invite-card {}
@@ -335,8 +338,22 @@ body {
     font-weight:300;
 }
 
+
 @media only screen and (max-width: 48em) {
 
+    .inactive {
+        display: none !important;
+    }
+  
+    .menu-toggle {
+        display: flex;
+    }
+
+    .title{
+        width: 16rem;
+      text-align: center;
+    }
+    
     .picture-card {
         width: 100%;
     }
@@ -367,6 +384,8 @@ body {
 
     }
 
+   
+    
     .footer-card {
         flex-direction: column;
         align-items: center;
@@ -385,11 +404,17 @@ body {
         position: relative;
         overflow: hidden;
     }
+    .card {
+        display: flex;
+        align-items: center;
+    }
 
 
     .card-holder {
+        display: flex;
         padding-left: 1.5rem;
         padding-right: 1.5rem;
+        align-content: center;
     }
 
     .card-rest {
@@ -403,7 +428,7 @@ body {
     }
 
     .invite-btn-nav {
-        display: none;
+        display: none !important;
     }
 
     .banner img {
@@ -411,9 +436,7 @@ body {
     }
 
 
-    .inactive {
-        display: none;
-    }
+   
 
     .menu {
         flex-direction: column;
@@ -434,6 +457,7 @@ body {
         padding: 0.2rem;
         display: flex;
         justify-content: center;
+        color:black;
     }
 
     .menu-toggle {
